[project]
name = "whatsapp-gas-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.14",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "selenium>=4.34.0",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
]
